log
Fri 19 Aug 2022 12:29:37 PM UTC: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
54ddba0
Fri 19 Aug 2022 12:33:47 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
Compilation failed
c2ea7ad
Fri 19 Aug 2022 12:47:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a411db1
Fri 19 Aug 2022 12:48:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b74ef38
Fri 19 Aug 2022 12:55:26 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
b131903
Fri 19 Aug 2022 01:00:49 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/70
57cbcac
Fri 19 Aug 2022 01:05:43 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   61 |   if (list == NULL) return NULL;
      |                            ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:63:9: error: unused variable ‘newNode’ [-Werror=unused-variable]
   63 |   Node *newNode = createNode(data);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4534fd
